# StarEngine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Constants.cpp  Constants.h  Event.cpp  Event.h  Forward.h  Main.cpp  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRegistry.cpp  ModelRegistry.h  PreCompiled.cpp  PreCompiled.h  SkyBox.cpp  SkyBox.h  SystemTime.cpp  SystemTime.h  Types.h
Engine/AssetLoader/: AssetLoader.cpp  AssetLoader.h  FileObserver.cpp  FileObserver.h  WatchDog.cpp  WatchDog.h
Engine/AssetLoader/AssetReference/: AssetReference.cpp  AssetReference.h  MaterialReference.cpp  MaterialReference.h  ModelReference.cpp  ModelReference.h  ShaderReference.cpp  ShaderReference.h  SkyBoxReference.cpp  SkyBoxReference.h  Texture2DReference.cpp  Texture2DReference.h
Engine/EnTT/Components/: CameraComponents.h  ControllerComponents.h  LightComponents.h  PhysicsComponents.h  RenderComponents.h  TransformComponents.h
Engine/EnTT/Systems/: ControllerSystem.cpp  ControllerSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  TransformSystem.cpp  TransformSystem.h
Engine/GLAD/: glad.cpp  glad.h
Engine/OpenGL/: Gizmo.cpp  Gizmo.h  Material.cpp  Material.h  MaterialRegistry.cpp  MaterialRegistry.h  Mesh.cpp  Mesh.h  RenderModes.h
Engine/OpenGL/Buffer/: IndexBuffer.cpp  IndexBuffer.h  StorageBuffer.cpp  StorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Engine/OpenGL/FrameBuffer/: DefaultFrameBuffer.cpp  DefaultFrameBuffer.h  DeferredGeometryFrameBuffer.cpp  (+3 more)
Engine/Utility/: AssimpUtility.cpp  AssimpUtility.h  FileSystem.cpp  FileSystem.h  MathUtility.cpp  MathUtility.h  PathUtility.cpp  PathUtility.h  StringUtility.cpp  StringUtility.h
(+40 files in other folders)
